<resources>
    <string name="app_name">MoviesApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="loginhere">Login Here</string>
    <string name="signuphere">Create a new account.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Your Profile</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="appearance">Appearance</string>
    <string name="about">About</string>
    <string name="favmovie">Favourite Movie:</string>
    <string name="name">Name:</string>
    <string name="favourite">Favourites</string>
    <string name="addmovie">Add Movie</string>
    <string name="save">Save</string>
</resources>